fix: Toggle button on mobile with nowrap for flex

--- a/Source/Blazorise/Styles/_bar.scss
+++ b/Source/Blazorise/Styles/_bar.scss
@@ -49,6 +49,10 @@
     position: relative;
 }
 
+.b-bar-horizontal {
+    flex-wrap: nowrap;
+}
+
 .b-bar-vertical-inline,
 .b-bar-vertical-popout,
 .b-bar-vertical-small {
