--- a/Source/Blazorise/wwwroot/blazorise.css
+++ b/Source/Blazorise/wwwroot/blazorise.css
@@ -212,6 +212,9 @@
 .b-layout-header .navbar {
     line-height: inherit; }
 
+.b-bar-horizontal {
+    flex-wrap: nowrap; }
+
 .b-bar-vertical-inline,
 .b-bar-vertical-popout,
 .b-bar-vertical-small {
